name:                tcod-haskell
version:             0.1.0.0
synopsis:            Bindings to libtcod roguelike engine
description:         Haskell bindings for popular library for making roguelike games
homepage:            https://github.com/ncrashed/tcod-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ncrashed/tcod-haskell
