name:                tcod-haskell
version:             0.1.0.0
synopsis:            Bindings to libtcod roguelike engine
description:         Haskell bindings for popular library for making roguelike games
homepage:            https://github.com/ncrashed/tcod-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Game
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
  setup-depends:
      base        >= 4.5     && < 4.11
    , Cabal                     < 1.25
    , directory   >= 1.0     && < 2.0

flag examples
  description: build engine examples
  default: False

library
  hs-source-dirs:      src
  exposed-modules:
    Game.TCOD
    Game.TCOD.Color
    Game.TCOD.Console
    Game.TCOD.ConsoleTypes
    Game.TCOD.Context
    Game.TCOD.Image
    Game.TCOD.List
  include-dirs:
    libtcod/include
  c-sources:
    src/Game/TCOD/Color.c
    src/Game/TCOD/Console.c
    src/Game/TCOD/Image.c
    src/Game/TCOD/List.c
  build-depends:
      base                      >= 4.7      && < 5
    , containers                >= 0.5      && < 0.6
    , inline-c                  >= 0.5      && < 0.6
    , vector                    >= 0.12     && < 0.13

  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
  extra-libraries: tcod

source-repository head
  type:     git
  location: https://github.com/ncrashed/tcod-haskell

executable tcod-haskell-sample01
  hs-source-dirs:      app/sample01
  main-is:             Main.hs
  ghc-options:         -Odph -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -threaded -rtsopts -with-rtsopts=-N
  -- other-modules:
  build-depends:
      base
    , tcod-haskell

  default-extensions:
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
  default-language:    Haskell2010

  if flag(examples)
    Buildable: True
  else
    -- Buildable: False
    Buildable: True
